Salesforce-Deployment/force-app/main/default/objects/Deploy__c/fields/ComponentFailures__c.field-meta.xml
<CustomField>
    <fullName>ComponentFailures__c</fullName>
    <label>ComponentFailures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>