Salesforce-Deployment/force-app/main/default/objects/Deploy__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Deploys</relationshipLabel>
    <relationshipName>Deploys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>