Salesforce-Deployment/force-app/main/default/objects/Deploy__c/fields/Retrieve__c.field-meta.xml
<CustomField>
    <fullName>Retrieve__c</fullName>
    <label>Retrieve</label>
    <referenceTo>Retrieve__c</referenceTo>
    <relationshipLabel>Deploys</relationshipLabel>
    <relationshipName>Deploys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>