Salesforce-Deployment/force-app/main/default/objects/Deploy__c/fields/TestLevel__c.field-meta.xml
<CustomField>
    <fullName>TestLevel__c</fullName>
    <label>Test Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoTestRun</fullName>
            </value>
            <value>
                <fullName>RunLocalTests</fullName>
            </value>
            <value>
                <fullName>RunAllTestsInOrg</fullName>
            </value>
            <value>
                <fullName>RunSpecifiedTests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>